converted some raw text to markdown

--- a/Cheshire3 Log.ipynb
+++ b/Cheshire3 Log.ipynb
@@ -8,47 +8,53 @@
   {
    "cells": [
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Search results for 'germany;':\n",
-      "harbinger:~$ cheshire3-search --database=db_ft germany\n",
-      "searched: cql.anywhere all \"germany\"\n",
-      "4 hits\n",
-      "1 recordStore/22843\n",
-      "2 recordStore/63685\n",
-      "3 recordStore/176606\n",
-      "4 recordStore/206786"
+      "<p>\n",
+      "    Search results for 'germany;':<br/><br/>\n",
+      "    harbinger:~$ cheshire3-search --database=db_ft germany<br/>\n",
+      "    searched: cql.anywhere all \"germany\"<br/>\n",
+      "    4 hits<br/>\n",
+      "    1 recordStore/22843<br/>\n",
+      "    2 recordStore/63685<br/>\n",
+      "    3 recordStore/176606<br/>\n",
+      "    4 recordStore/206786<br/>\n",
+      "</p>"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Search results for \"dc.title any 'germany'\"\n",
-      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title any 'germany'\"\n",
-      "searched: dc.title any \"'germany'\"\n",
-      "0 hits"
+      "<p>\n",
+      "Search results for \"dc.title any 'germany'\"<br/><br/>\n",
+      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title any 'germany'\"<br/>\n",
+      "searched: dc.title any \"'germany'\"<br/>\n",
+      "0 hits<br/>\n",
+      "</p>"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Search results for \"dc.title anywhere 'germany'\"\n",
-      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title anywhere 'germany'\"\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/bin/cheshire3-search\", line 9, in <module>\n",
-      "    load_entry_point('cheshire3==1.0.11', 'console_scripts', 'cheshire3-search')()\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/commands/cheshire3_search.py\", line 68, in main\n",
-      "    resultSet = db.search(session, query)\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 291, in search\n",
-      "    rs = self._search(session, query)\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 231, in _search\n",
-      "    rs = idx.search(session, query, self)\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/index.py\", line 692, in search\n",
-      "    24)\n",
-      "cheshire3.exceptions.QueryException: <class 'cheshire3.exceptions.QueryException'>: anywhere \"'germany'\""
+      "<p>\n",
+      "Search results for \"dc.title anywhere 'germany'\"<br/><br/>\n",
+      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title anywhere 'germany'\"<br/>\n",
+      "Traceback (most recent call last):<br/>\n",
+      "  File \"/usr/bin/cheshire3-search\", line 9, in <module><br/>\n",
+      "    load_entry_point('cheshire3==1.0.11', 'console_scripts', 'cheshire3-search')()<br/>\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/commands/cheshire3_search.py\", line 68, in main<br/>\n",
+      "    resultSet = db.search(session, query)<br/>\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 291, in search<br/>\n",
+      "    rs = self._search(session, query)<br/>\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 231, in _search<br/>\n",
+      "    rs = idx.search(session, query, self)<br/>\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/index.py\", line 692, in search<br/>\n",
+      "    24)<br/>\n",
+      "cheshire3.exceptions.QueryException: <class 'cheshire3.exceptions.QueryException'>: anywhere \"'germany'\"<br/>\n",
+      "</p>"
      ]
     },
     {
