Added more markdown

--- a/Cheshire3 Log.ipynb
+++ b/Cheshire3 Log.ipynb
@@ -12,7 +12,7 @@
      "metadata": {},
      "source": [
       "<p>\n",
-      "    Search results for 'germany;':<br/><br/>\n",
+      "    <h3>Search results for 'germany;':</h3>\n",
       "    harbinger:~$ cheshire3-search --database=db_ft germany<br/>\n",
       "    searched: cql.anywhere all \"germany\"<br/>\n",
       "    4 hits<br/>\n",
@@ -28,7 +28,7 @@
      "metadata": {},
      "source": [
       "<p>\n",
-      "Search results for \"dc.title any 'germany'\"<br/><br/>\n",
+      "    <h3>Search results for \"dc.title any 'germany'\":</h3>\n",
       "harbinger:~$ cheshire3-search --database=db_ft \"dc.title any 'germany'\"<br/>\n",
       "searched: dc.title any \"'germany'\"<br/>\n",
       "0 hits<br/>\n",
@@ -40,7 +40,7 @@
      "metadata": {},
      "source": [
       "<p>\n",
-      "Search results for \"dc.title anywhere 'germany'\"<br/><br/>\n",
+      "    <h3>Search results for \"dc.title anywhere 'germany'\":</h3>\n",
       "harbinger:~$ cheshire3-search --database=db_ft \"dc.title anywhere 'germany'\"<br/>\n",
       "Traceback (most recent call last):<br/>\n",
       "  File \"/usr/bin/cheshire3-search\", line 9, in <module><br/>\n",
@@ -58,9 +58,10 @@
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<span>\n",
       "zeerex_sru.xml\n",
       "\n",
       "<explain xmlns:c3=\"http://www.cheshire3.org/schemas/explain/\" xmlns=\"http://explain.z3950.org/dtd/2.0/\" authoritative=\"true\" id=\"db_ft\">\n",
@@ -109,13 +110,15 @@
       "        <supports type=\"relation\">any</supports>\n",
       "        <supports type=\"relationModifier\">word</supports>\n",
       "      </configInfo>\n",
-      "    </index>"
+      "    </index>\n",
+      "</span>"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "<span>\n",
       "config.xml\n",
       "\n",
       "<config type=\"database\" id=\"db_ft\">\n",
@@ -412,7 +415,8 @@
       "      </source>\t\n",
       "    </subConfig>\n",
       "  </subConfigs>\n",
-      "</config>"
+      "</config>\n",
+      "</span>"
      ]
     }
    ],
