--- a/Cheshire3 Log.ipynb
+++ b/Cheshire3 Log.ipynb
@@ -119,7 +119,7 @@
      "metadata": {},
      "source": [
       "<span>\n",
-      "config.xml\n",
+      "<h3>config.xml:</h3>\n",
       "\n",
       "<config type=\"database\" id=\"db_ft\">\n",
       "  <objectType>cheshire3.database.SimpleDatabase</objectType>\n",
@@ -418,6 +418,14 @@
       "</config>\n",
       "</span>"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
