Added configIndexes.xml on the bottom

--- a/Cheshire3 Log.ipynb
+++ b/Cheshire3 Log.ipynb
@@ -36,25 +36,24 @@
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
-      "<p>\n",
-      "    <h3>Search results for \"dc.title anywhere 'germany'\":</h3>\n",
-      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title anywhere 'germany'\"<br/>\n",
-      "Traceback (most recent call last):<br/>\n",
-      "  File \"/usr/bin/cheshire3-search\", line 9, in <module><br/>\n",
-      "    load_entry_point('cheshire3==1.0.11', 'console_scripts', 'cheshire3-search')()<br/>\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/commands/cheshire3_search.py\", line 68, in main<br/>\n",
-      "    resultSet = db.search(session, query)<br/>\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 291, in search<br/>\n",
-      "    rs = self._search(session, query)<br/>\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 231, in _search<br/>\n",
-      "    rs = idx.search(session, query, self)<br/>\n",
-      "  File \"/usr/lib/python2.7/site-packages/cheshire3/index.py\", line 692, in search<br/>\n",
+      "Search results for \"dc.title anywhere 'germany'\":\n",
+      "\n",
+      "harbinger:~$ cheshire3-search --database=db_ft \"dc.title anywhere 'germany'\"\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/bin/cheshire3-search\", line 9, in <module>\n",
+      "    load_entry_point('cheshire3==1.0.11', 'console_scripts', 'cheshire3-search')()\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/commands/cheshire3_search.py\", line 68, in main\n",
+      "    resultSet = db.search(session, query)\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 291, in search\n",
+      "    rs = self._search(session, query)\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/database.py\", line 231, in _search\n",
+      "    rs = idx.search(session, query, self)\n",
+      "  File \"/usr/lib/python2.7/site-packages/cheshire3/index.py\", line 692, in search\n",
       "    24)<br/>\n",
-      "cheshire3.exceptions.QueryException: <class 'cheshire3.exceptions.QueryException'>: anywhere \"'germany'\"<br/>\n",
-      "</p>"
+      "cheshire3.exceptions.QueryException: <class 'cheshire3.exceptions.QueryException'>: anywhere \"'germany'\"\n"
      ]
     },
     {
@@ -115,7 +114,7 @@
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "raw",
      "metadata": {},
      "source": [
       "<span>\n",
@@ -420,12 +419,107 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "<h3>configIndexes.xml</h3>"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
+      "<config>\n",
+      "  <subConfigs>\n",
+      "    <subConfig type=\"index\" id=\"idx-docno\">\n",
+      "      <docs>Doc Identifier Index</docs>\n",
+      "      <objectType>cheshire3.index.SimpleIndex</objectType>\n",
+      "      <paths>\n",
+      "        <object ref=\"indexStore\" type=\"indexStore\"/>\n",
+      "      </paths>\n",
+      "      <source>\n",
+      "        <selector ref=\"idSelector\"/>\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "    </subConfig>\n",
+      "    <subConfig type=\"index\" id=\"idx-pauthor\">\n",
+      "      <docs>Author Identifier Index</docs>\n",
+      "      <objectType>cheshire3.index.SimpleIndex</objectType>\n",
+      "      <paths>\n",
+      "        <object ref=\"indexStore\" type=\"indexStore\"/>\n",
+      "      </paths>\n",
+      "      <source>\n",
+      "        <selector ref=\"idSelector\"/>\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "    </subConfig>\n",
+      "    <subConfig type=\"index\" id=\"idx-title\">\n",
+      "      <docs>Title Identifier Index</docs>\n",
+      "      <objectType>cheshire3.index.SimpleIndex</objectType>\n",
+      "      <paths>\n",
+      "        <object ref=\"indexStore\" type=\"indexStore\"/>\n",
+      "      </paths>\n",
+      "      <source>\n",
+      "        <selector ref=\"idSelector\"/>\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "    </subConfig>\n",
+      "    <subConfig type=\"index\" id=\"idx-topic\">\n",
+      "      <docs>Topic Identifier Index</docs>\n",
+      "      <objectType>cheshire3.index.SimpleIndex</objectType>\n",
+      "      <paths>\n",
+      "        <object ref=\"indexStore\" type=\"indexStore\"/>\n",
+      "      </paths>\n",
+      "      <source>\n",
+      "        <selector ref=\"idSelector\"/>\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "    </subConfig>\n",
+      "    <subConfig type=\"index\" id=\"idx-all\">\n",
+      "      <docs>Anywhere / Full-text Index</docs>\n",
+      "      <objectType>cheshire3.index.SimpleIndex</objectType>\n",
+      "      <paths>\n",
+      "        <object ref=\"indexStore\" type=\"indexStore\"/>\n",
+      "      </paths>\n",
+      "      <source mode=\"data\">\n",
+      "        <selector ref=\"anywhereXPathSelector\"/>\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "          <object ref=\"RegexpFindTokenizer\" type=\"tokenizer\"/>\n",
+      "          <object ref=\"SimpleTokenMerger\" type=\"tokenMerger\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "      <source mode=\"all|any|=\">\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "          <object ref=\"PreserveMaskingTokenizer\" type=\"tokenizer\"/>\n",
+      "          <object ref=\"SimpleTokenMerger\" type=\"tokenMerger\"/>\n",
+      "          <object ref=\"DiacriticNormalizer\" type=\"normalizer\"/>\n",
+      "          <object ref=\"CaseNormalizer\" type=\"normalizer\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "      <source mode=\"exact\">\n",
+      "        <process>\n",
+      "          <object ref=\"SimpleExtractor\" type=\"extractor\"/>\n",
+      "          <object ref=\"PreserveMaskingTokenizer\" type=\"tokenizer\"/>\n",
+      "          <object ref=\"SimpleTokenMerger\" type=\"tokenMerger\"/>\n",
+      "          <object ref=\"SpaceNormalizer\" type=\"normalizer\"/>\n",
+      "          <object ref=\"DiacriticNormalizer\" type=\"normalizer\"/>\n",
+      "          <object ref=\"CaseNormalizer\" type=\"normalizer\"/>\n",
+      "        </process>\n",
+      "      </source>\n",
+      "    </subConfig>\n",
+      "  </subConfigs>\n",
+      "</config>\n"
+     ]
     }
    ],
    "metadata": {}
