--- a/Cheshire3 Log.ipynb
+++ b/Cheshire3 Log.ipynb
@@ -60,9 +60,13 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<span>\n",
-      "zeerex_sru.xml\n",
-      "\n",
+      "<h3>zeerex_sru.xml</h3>"
+     ]
+    },
+    {
+     "cell_type": "raw",
+     "metadata": {},
+     "source": [
       "<explain xmlns:c3=\"http://www.cheshire3.org/schemas/explain/\" xmlns=\"http://explain.z3950.org/dtd/2.0/\" authoritative=\"true\" id=\"db_ft\">\n",
       "  <serverInfo version=\"1.1\" protocol=\"srw/u\" transport=\"http\">\n",
       "    <host>harbinger.ischool.berkeley.edu</host>\n",
@@ -109,17 +113,20 @@
       "        <supports type=\"relation\">any</supports>\n",
       "        <supports type=\"relationModifier\">word</supports>\n",
       "      </configInfo>\n",
-      "    </index>\n",
-      "</span>"
+      "    </index>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<h3>config.xml:</h3>"
      ]
     },
     {
      "cell_type": "raw",
      "metadata": {},
      "source": [
-      "<span>\n",
-      "<h3>config.xml:</h3>\n",
-      "\n",
       "<config type=\"database\" id=\"db_ft\">\n",
       "  <objectType>cheshire3.database.SimpleDatabase</objectType>\n",
       "  <paths>\n",
@@ -251,7 +258,7 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//DOCNO</xpath>\n",
+      "        <xpath>//docno</xpath>\n",
       "        <process>\n",
       "          <!-- extract text from result of XPath evaluation -->\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
@@ -272,13 +279,13 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//BYLINE</xpath>\n",
+      "        <xpath>//byline</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"AuthorStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"AuthorStoplistNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
       "    </subConfig>\n",
@@ -290,13 +297,13 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//HEADLINE</xpath>\n",
+      "        <xpath>//headline</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"TitleStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"TitleStoplistNormalizer\" />\n",
       "          <object type=\"normalizer\" ref=\"EnglishStemNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
@@ -309,16 +316,16 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//HEADLINE</xpath>\n",
-      "        <xpath>//DATELINE</xpath>\n",
-      "        <xpath>//HBYLINE</xpath>\n",
-      "        <xpath>//TEXT</xpath>\n",
+      "        <xpath>//headline</xpath>\n",
+      "        <xpath>//dateline</xpath>\n",
+      "        <xpath>//hbyline</xpath>\n",
+      "        <xpath>//text</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"TopicStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"TopicStoplistNormalizer\" />\n",
       "          <object type=\"normalizer\" ref=\"EnglishStemNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
@@ -331,13 +338,13 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>/DOC</xpath>\n",
+      "        <xpath>/doc</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"FullStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"FullStoplistNormalizer\" />\n",
       "          <object type=\"normalizer\" ref=\"EnglishStemNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
@@ -350,13 +357,13 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//DATELINE</xpath>\n",
+      "        <xpath>//dateline</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"TitleStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"TitleStoplistNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
       "    </subConfig>\n",
@@ -368,14 +375,14 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//DATELINE</xpath>\n",
-      "        <xpath>//CN</xpath>\n",
+      "        <xpath>//dateline</xpath>\n",
+      "        <xpath>//cn</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenMerger\"/>\n",
       "          <object type=\"normalizer\" ref=\"CaseNormalizer\" />\n",
-      "          <!--<object type=\"normalizer\" ref=\"CountryStoplistNormalizer\" />-->\n",
+      "          <object type=\"normalizer\" ref=\"CountryStoplistNormalizer\" />\n",
       "        </process>\n",
       "      </source>\t\n",
       "    </subConfig>\n",
@@ -387,7 +394,7 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//IN</xpath>\n",
+      "        <xpath>//in</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
@@ -404,7 +411,7 @@
       "        <object type=\"indexStore\" ref=\"indexStore\" />\n",
       "      </paths>\n",
       "      <source>\n",
-      "        <xpath>//TP</xpath>\n",
+      "        <xpath>//tp</xpath>\n",
       "        <process>\n",
       "          <object type=\"extractor\" ref=\"SimpleExtractor\" />\n",
       "          <object type=\"tokenizer\" ref=\"SimpleTokenizer\"/>\n",
@@ -414,8 +421,7 @@
       "      </source>\t\n",
       "    </subConfig>\n",
       "  </subConfigs>\n",
-      "</config>\n",
-      "</span>"
+      "</config>"
      ]
     },
     {
